# mhxy-skill-tools

./: .gitignore  README.md  SETUP.md  check-rust.ps1  create-icons.ps1  index.html  mhxy-.db  package-lock.json  package.json  start-tauri.bat  start.bat  vite.config.ts  修复说明.md  发布与更新.md  安装Rust.md  快速开始.txt  生成图标说明.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs  state.rs
src/components/: AccountDetail.tsx  AccountForm.tsx  AccountList.tsx  AccountLogTab.tsx  AccountStatsTab.tsx  CultivationManager.tsx  SkillItem.tsx  SkillManager.tsx  StatsTab.tsx  UpdateAccountTab.tsx  UpdateTab.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx  toast.tsx
src/data/: assistSkillCosts.ts  cultivationCosts.ts  schools.ts  skillCosts.ts
src/lib/: db.ts
src/services/: accountService.ts  changeLogService.ts  cultivationService.ts  skillService.ts  spendService.ts
src/utils/: cultivationCalculator.ts  skillCalculator.ts
